fixed scrollbar issue, nothing jumps anymore

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,12 @@
   text-align: center;
   height: 10vh;
   font-family: Assistant;
+  // overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  // background: transparent; /* Optional: just make scrollbar invisible */
 }
 
 .App-logo {
@@ -40,8 +46,6 @@
     transform: rotate(360deg);
   }
 }
-
-
 
 input:focus,
 textarea:focus,
