--- a/client/src/style/superAdmin/table_style.scss
+++ b/client/src/style/superAdmin/table_style.scss
@@ -124,7 +124,12 @@
 .TeachersList {
   padding: 0;
   margin: 0;
+  // overflow-y: scroll;
 }
+.TeachersList::-webkit-scrollbar {
+  display: none;
+  }
+
 
 .generalTable {
   padding-bottom: 1.5vh;
